login page done4

--- a/src/Components/Heading/Heading.scss
+++ b/src/Components/Heading/Heading.scss
@@ -1,7 +1,7 @@
 .heading{
     text-align: center;
     font-weight: 900;
-    padding: 50px 0px 0px 0px;
+    // padding: 50px 0px 0px 0px;
     color: #221638 ;
 }
 .title-separator {
