added patient admit form

--- a/src/Components/Listview/Listview.scss
+++ b/src/Components/Listview/Listview.scss
@@ -37,3 +37,16 @@ input:focus, textarea:focus, select:focus{
     font-style: bold;
 }
 
+// .add{
+//     width: 48px;
+//     height: 48px;
+//     border-radius: 50%;
+//     background-color:#007bff;
+//     justify-content: center;
+//     align-items: center;
+//     display: flex;
+// }
+
+.check{
+    margin-top: 100px;
+}
