--- a/src/Components/Profile/Profile.scss
+++ b/src/Components/Profile/Profile.scss
@@ -2,5 +2,5 @@
     background-color: #fff;
     border: none!important;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.05);
-    
+    border-radius: 30px;
 }
