--- a/src/Components/Heading/Heading.scss
+++ b/src/Components/Heading/Heading.scss
@@ -20,4 +20,10 @@
     .heading{
         font-size: 30px;
     }
+    a button{
+        font-size: 14px!important;
+    }
+    h5,h6,p,button{
+        font-size: 14px!important;
+    }
 }
