added some changes

--- a/src/Components/Listview/Listview.scss
+++ b/src/Components/Listview/Listview.scss
@@ -26,9 +26,9 @@ input:focus, textarea:focus, select:focus{
 .searchbarcontainer{
     position: relative;
     z-index: 12;
-    height: 48px;
+    // height: 48px;
     background : #fff;
-    align-content: 'center';
+    // align-content: 'center';
     border-radius: 30px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);    
 }
