added new patient pafe

--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -2,7 +2,15 @@
     width: 100%;
     border-radius: 30px;
 }
-
+.buttonpre{
+    width: 40%;
+    border-radius: 30px;
+}
+.buttonnext{
+    width: 40%;
+    float: right;
+    border-radius: 30px;
+}
 // #4267B2 facebook
 // #00acee Twitter
 // #db4a39 google+
