--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@ h1{
 h2{
   font-size : calc(var(--font-size-h) - 5) !important; 
 }
+/* h3{
+  font-size : calc(var(--font-size-h) - 2) !important; 
+} */
+
 
 h4{
   font-size : calc(var(--font-size-h) - 10) !important;
