--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -11,9 +11,9 @@
     float: right;
     border-radius: 30px;
 }
-// #4267B2 facebook
+/* // #4267B2 facebook
 // #00acee Twitter
-// #db4a39 google+
+// #db4a39 google+ */
 
 .loginform .form-group .form-control{
     border-radius: 30px!important;
