--- a/src/index.css
+++ b/src/index.css
@@ -63,3 +63,20 @@ p{
   }
   
 } */
+
+::-webkit-scrollbar{
+  background-color: #FAFAFE;
+  width: 5px;
+  height: 5px;
+  border-radius: 10px;
+
+}
+ 
+::-webkit-scrollbar-thumb{
+  width: 5px;
+  height: 5px;
+
+  background-color: #6C70F9;
+  border-radius: 10px;
+
+}
