--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,10 @@ code {
     monospace;
 }
 
- 
+ .css-h2fnfe{
+  min-height: 50px !important;
+  height: auto !important;
+ }
 
 /* h1{
   font-size: var(--font-size-h) !important;
